WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
315120
The window.orientation property incorrectly returns 0 on initial load in WKWebView regardless of device orientation
https://bugs.webkit.org/show_bug.cgi?id=315120
Summary
The window.orientation property incorrectly returns 0 on initial load in WKWe...
Jessica Cheung
Reported
2026-05-19 13:53:41 PDT
rdar://175523434
Attachments
Add attachment
proposed patch, testcase, etc.
Jessica Cheung
Comment 1
2026-05-19 14:26:24 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/65216
EWS
Comment 2
2026-05-20 10:12:54 PDT
Committed
313582@main
(57ddad105b2f): <
https://commits.webkit.org/313582@main
> Reviewed commits have been landed. Closing PR #65216 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug